NXP-28125: caption service